--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,8 +7,8 @@
 @import 'main/main';
 @import 'footer/footer';
 
-
 * {
     box-sizing: border-box;
     margin: 0;
+    scroll-behavior: smooth;
 }
