--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -36,6 +36,8 @@ $font-inter: 'Inter', serif;
         background: #BDAE82;
         color: black;
         border-radius: 10px;
+        font-size: 20px;
+        font-family: $font-inter;
 
         &:hover {
             color: #fff;
@@ -145,6 +147,211 @@ $font-inter: 'Inter', serif;
 
 .portfolio__container {
     background: black;
-    height: 600px;
     padding-top: 100px;
+
+    .btn__block {
+        margin-top: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .btn__season {
+            width: 220px;
+            height: 55px;
+            background: black;
+            border: 2px solid #BDAE82;
+            color: #BDAE82;
+            margin-right: 5px;
+            font-size: 20px;
+            font-family: $font-inter;
+            box-shadow: 0 2px 15px #bdae82;
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            &:hover {
+                background: #BDAE82;
+                color: black;
+                transition: all 0.5s ease-out;
+            }
+
+            &.btn__season__active {
+                background: #BDAE82;
+                color: black;
+            }
+        }
+    }
+
+    .portfolio__wrapper {
+        margin-top: 50px;
+        padding: 0 20px;
+        display: flex;
+        gap: 25px;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        .portfolio__img {
+            width: 450px;
+            height: 560px;
+        }
+    }
+}
+
+.video__container {
+    background: black;
+    padding-top: 100px;
+
+    .video__wrapper {
+        padding: 60px 10px 0;
+
+        .video__player {
+            background-image: url('../assets/video-player.png');
+            width: 100%;
+            height: 705px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .btn__video {
+                background-image: url('../assets/icons/Play_hover.png');
+                width: 130px;
+                height: 130px;
+                position: absolute;
+                cursor: pointer;
+
+                &:hover {
+                    background-image: url('../assets/icons/Play_hover_gold.png');
+                    transition: all 0.3s ease-out;
+                }
+            }
+        }
+    }
+}
+
+.price__container {
+    background: black;
+    padding: 100px 10px 60px;
+
+    .price__wrapper {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 60px;
+
+        .block_price {
+            border: 4px solid #bdae82;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            width: 450px;
+            margin-right: 15px;
+            padding: 45px 0;
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            h3 {
+                font-size: 28px;
+                font-family: $font-merri;
+                margin-bottom: 20px;
+            }
+            .coast {
+                font-size: 24px;
+                color: #bdae82;
+                margin-bottom: 20px;
+            }
+
+            p {
+                font-size: 18px;
+                line-height: 30px;
+            }
+
+            button {
+                width: 220px;
+                height: 55px;
+                background: #bdae82;
+                color: black;
+                font-size: 20px;
+                font-family: $font-inter;
+                border-radius: 10px;
+                margin-top: 40px;
+
+                &:hover {
+                    color: #fff;
+                    transition: all 0.3s ease-out;
+                }
+            }
+        }
+    }
+}
+
+.contact_container {
+    background: black;
+    display: flex;
+    justify-content: flex-end;
+    background: url('../assets/contacts.jpg') no-repeat;
+    background-size: cover;
+    height: 700px;
+
+    .contact__wrapper {
+        display: flex;
+        flex-direction: column;
+        margin: 60px 20px 0 0;
+        width: 450px;
+
+        h2 {
+            color: #bdae82;
+            font-size: 40px;
+            font-family: $font-merri;
+            margin-bottom: 40px;
+        }
+
+        .contact__form {
+            display: flex;
+            flex-direction: column;
+
+            input {
+                margin-bottom: 20px;
+                height: 50px;
+                background: rgba(0, 0, 0, 0.5);
+                border: 2px solid #BDAE82;
+                padding: 5px 0 5px 20px;
+                font-family: $font-inter;
+                font-size: 20px;
+                border-radius: 10px;
+    
+                &::placeholder {
+                    color: #bdae82;
+                }
+
+                &.contact__text {
+                    height: 100px;
+                    margin-bottom: 30px;
+                    
+                    &::placeholder {
+                        text-align: start;
+                        transform: translateY(-25px);
+                    }
+                }
+            }
+
+            button {
+                width: 220px;
+                height: 55px;
+                background: #bdae82;
+                color: black;
+                font-family: $font-inter;
+                font-size: 20px;
+
+                &:hover {
+                    color: #fff;
+                    transition: all 0.3s ease-out;
+                }
+            }
+        }
+    }
 }
