--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -1,19 +1,72 @@
 $font-style: 'Inter', sans-serif;
 
 .header {
+    width: 100%;
     height: 90px;
     background-image: url('../assets/bg.png');
     background-repeat: no-repeat;
     background-position: center 0;
 }
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
+.header__burger {
+    display: none;
+
+    @media (max-width: 768px) {
+            display: block;
+            position: relative;
+            width: 30px;
+            height: 20px;
+            z-index: 5;
+            cursor: pointer;
+    
+            span {
+                position: absolute;
+                background-color: white;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                top: 9px;
+                transition: all 0.3s ease 0s;
+            }
+    
+            &::before, &::after {
+                content: "";
+                background-color: white;
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                left: 0;
+                transition: all 0.3s ease 0s;
+            }
+    
+            &::before {
+                top: 0;
+            }
+    
+            &::after {
+                bottom: 0;
+            }
+    
+            &.active {
+                &::before {
+                    transform: rotate(45deg);
+                    top: 9px;
+                }
+    
+                span {
+                    transform: scale(0);
+                }
+    
+                &::after {
+                    transform: rotate(-45deg);
+                    bottom: 9px;
+                }
+            }
+    }
 }
 
 .container__header {
-    padding: 15px 10px;
+    padding: 15px 20px;
     height: 90px;
     display: flex;
     justify-content: space-between;
@@ -41,6 +94,7 @@ $font-style: 'Inter', sans-serif;
         text-decoration: none;
         font-family: $font-style;
         color: #fff;
+        font-size: 22px;
         margin-right: 30px;
         transition: all 0.3s ease-out;
 
@@ -50,6 +104,37 @@ $font-style: 'Inter', sans-serif;
 
         &:last-child {
             margin-right: 0;
+        }
+    }
+
+    @media (max-width: 768px){
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        transition: left 0.4s ease 0s;
+
+        &.active {
+            left: 0;
+        }
+
+        .nav__bar {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: black;
+            margin-left: auto;
+            height: 100%;
+            width: 480px;
+            
+            a {
+                font-size: 30px;
+                margin-right: 0;
+                margin-bottom: 25px;
+            }
         }
     }
 }
