--- a/scss/index.css
+++ b/scss/index.css
@@ -1,19 +1,70 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Merriweather:wght@700&display=swap");
 .header {
+  width: 100%;
   height: 90px;
   background-image: url("../assets/bg.png");
   background-repeat: no-repeat;
   background-position: center 0;
 }
 
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
+.header__burger {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 5;
+    cursor: pointer;
+  }
+  .header__burger span {
+    position: absolute;
+    background-color: white;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger::before, .header__burger::after {
+    content: "";
+    background-color: white;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger::before {
+    top: 0;
+  }
+  .header__burger::after {
+    bottom: 0;
+  }
+  .header__burger.active::before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 9px;
+  }
+  .header__burger.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .header__burger.active::after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 9px;
+  }
 }
 
 .container__header {
-  padding: 15px 10px;
+  padding: 15px 20px;
   height: 90px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -54,6 +105,7 @@
   text-decoration: none;
   font-family: "Inter", sans-serif;
   color: #fff;
+  font-size: 22px;
   margin-right: 30px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
@@ -65,6 +117,46 @@
 
 .nav a:last-child {
   margin-right: 0;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    -webkit-transition: left 0.4s ease 0s;
+    transition: left 0.4s ease 0s;
+  }
+  .nav.active {
+    left: 0;
+  }
+  .nav .nav__bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: black;
+    margin-left: auto;
+    height: 100%;
+    width: 480px;
+  }
+  .nav .nav__bar a {
+    font-size: 30px;
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
 }
 
 .hero__container {
@@ -82,9 +174,14 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 500px;
-  padding-top: 160px;
-  padding-left: 80px;
+  width: 583px;
+  padding: 180px 80px;
+}
+
+@media (max-width: 768px) {
+  .about__hero {
+    width: auto;
+  }
 }
 
 .about__hero h1 {
@@ -94,12 +191,19 @@
   height: 100px;
 }
 
+@media (max-width: 768px) {
+  .about__hero h1 {
+    font-size: 50px;
+  }
+}
+
 .about__hero p {
   font-family: "Inter", serif;
   font-size: 20px;
   font-style: italic;
   color: #fff;
   height: 100px;
+  letter-spacing: 1px;
 }
 
 .about__hero button {
@@ -107,9 +211,11 @@
   height: 55px;
   background: #BDAE82;
   color: black;
+  margin-top: 40px;
   border-radius: 10px;
   font-size: 20px;
   font-family: "Inter", serif;
+  border: 2px solid #BDAE82;
 }
 
 .about__hero button:hover {
@@ -121,7 +227,6 @@
 
 .skills__container {
   padding: 100px 20px 0;
-  height: 420px;
   background: black;
 }
 
@@ -144,9 +249,15 @@
   position: relative;
 }
 
+@media (max-width: 768px) {
+  .title__section h2 {
+    font-size: 30px;
+  }
+}
+
 .title__section h2 span {
   display: inline-block;
-  margin: 0 .4em;
+  margin: 0.4em;
 }
 
 .title__section h2 span::before, .title__section h2 span::after {
@@ -166,13 +277,24 @@
 }
 
 .about__skills {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  row-gap: 40px;
+  -webkit-column-gap: 40px;
+          column-gap: 40px;
+  -ms-grid-columns: (minmax(320px, auto))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(320px, auto));
   margin-top: 60px;
+}
+
+@media (max-width: 768px) {
+  .about__skills {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .about__skills .skill {
@@ -188,10 +310,17 @@
           align-items: center;
   width: 320px;
   margin-right: 20px;
+  margin-bottom: 36px;
 }
 
 .about__skills .skill:last-child {
   margin-right: 0;
+}
+
+@media (max-width: 768px) {
+  .about__skills .skill:nth-child(2) {
+    margin-right: 0;
+  }
 }
 
 .about__skills .img__skill {
@@ -239,6 +368,14 @@
   padding-top: 100px;
 }
 
+.portfolio__container .title__section span::before, .portfolio__container .title__section span::after {
+  width: 85%;
+}
+
+.portfolio__container .title__section span::before {
+  margin-left: -87%;
+}
+
 .portfolio__container .btn__block {
   margin-top: 60px;
   display: -webkit-box;
@@ -250,6 +387,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .portfolio__container .btn__block .btn__season {
@@ -258,7 +397,7 @@
   background: black;
   border: 2px solid #BDAE82;
   color: #BDAE82;
-  margin-right: 5px;
+  margin: 10px;
   font-size: 20px;
   font-family: "Inter", serif;
   -webkit-box-shadow: 0 2px 15px #bdae82;
@@ -281,6 +420,20 @@
   color: black;
 }
 
+@media (max-width: 720px) {
+  .portfolio__container .btn__block .btn__season:nth-child(3) {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 460px) {
+  .portfolio__container .btn__block .btn__season {
+    width: 160px;
+    height: 35px;
+    font-size: 16px;
+  }
+}
+
 .portfolio__container .portfolio__wrapper {
   margin-top: 50px;
   padding: 0 20px;
@@ -300,6 +453,13 @@
   height: 560px;
 }
 
+@media (max-width: 460px) {
+  .portfolio__container .portfolio__wrapper .portfolio__img {
+    width: 380px;
+    height: 485px;
+  }
+}
+
 .video__container {
   background: black;
   padding-top: 100px;
@@ -309,8 +469,16 @@
   padding: 60px 10px 0;
 }
 
+@media (max-width: 768px) {
+  .video__container .video__wrapper {
+    padding: 60px 0 0;
+  }
+}
+
 .video__container .video__wrapper .video__player {
   background-image: url("../assets/video-player.png");
+  background-size: contain;
+  background-repeat: no-repeat;
   width: 100%;
   height: 705px;
   position: relative;
@@ -325,12 +493,28 @@
           align-items: center;
 }
 
+@media (max-width: 768px) {
+  .video__container .video__wrapper .video__player {
+    height: 341px;
+    background-size: cover;
+  }
+}
+
 .video__container .video__wrapper .video__player .btn__video {
   background-image: url("../assets/icons/Play_hover.png");
+  background-size: contain;
+  background-repeat: no-repeat;
   width: 130px;
   height: 130px;
   position: absolute;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .video__container .video__wrapper .video__player .btn__video {
+    width: 75px;
+    height: 75px;
+  }
 }
 
 .video__container .video__wrapper .video__player .btn__video:hover {
@@ -354,6 +538,13 @@
   margin-top: 60px;
 }
 
+@media (max-width: 768px) {
+  .price__container .price__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .price__container .price__wrapper .block_price {
   border: 4px solid #bdae82;
   color: #fff;
@@ -369,7 +560,7 @@
           align-items: center;
   text-align: center;
   width: 450px;
-  margin-right: 15px;
+  margin: 10px 15px 10px 0;
   padding: 45px 0;
 }
 
@@ -403,12 +594,32 @@
   font-family: "Inter", serif;
   border-radius: 10px;
   margin-top: 40px;
+  border: 2px solid #BDAE82;
+  -webkit-box-shadow: 0 2px 15px #bdae82;
+          box-shadow: 0 2px 15px #bdae82;
 }
 
 .price__container .price__wrapper .block_price button:hover {
   color: #fff;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+}
+
+@media (max-width: 768px) {
+  .price__container .price__wrapper .block_price:first-child {
+    margin-right: 0;
+  }
+  .price__container .price__wrapper .block_price:nth-child(2) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .price__container .price__wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .contact_container {
@@ -422,6 +633,15 @@
   background: url("../assets/contacts.jpg") no-repeat;
   background-size: cover;
   height: 700px;
+}
+
+@media (max-width: 768px) {
+  .contact_container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
 }
 
 .contact_container .contact__wrapper {
@@ -514,12 +734,21 @@
   color: black;
   font-family: "Inter", serif;
   font-size: 20px;
+  border: 2px solid #BDAE82;
 }
 
 .contact_container .contact__wrapper .contact__form button:hover {
   color: #fff;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+}
+
+@media (max-width: 768px) {
+  .contact_container .contact__wrapper .contact__form {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .footer__container {
@@ -553,10 +782,106 @@
   color: #fff;
 }
 
+@media (max-width: 520px) {
+  .footer__container .contact__author a {
+    font-size: 14px;
+  }
+}
+
 .footer__container .contact__author a:hover {
   color: #BDAE82;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+}
+
+.footer__container .contact__school {
+  background: url("../assets/logo_rss/logo_rs.svg") no-repeat;
+  background-size: contain;
+  width: 100px;
+  height: 60px;
+}
+
+@media (max-width: 520px) {
+  .footer__container .contact__school {
+    width: 80px;
+  }
+}
+
+.footer__container .social__contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__container .social__contact a {
+  width: 32px;
+  height: 32px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+@media (max-width: 520px) {
+  .footer__container .social__contact a {
+    width: 26px;
+    height: 26px;
+    margin-right: 10px;
+  }
+}
+
+.footer__container .social__contact a:last-child {
+  margin-right: 0;
+}
+
+.footer__container .social__contact .instagram {
+  background: url("../assets/icons/inst.png") no-repeat;
+  background-size: cover;
+}
+
+.footer__container .social__contact .instagram:hover {
+  background: url("../assets/icons/inst_gold.png") no-repeat;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.footer__container .social__contact .facebook {
+  background: url("../assets/icons/fb.png") no-repeat;
+  background-size: cover;
+}
+
+.footer__container .social__contact .facebook:hover {
+  background: url("../assets/icons/fb_gold.png") no-repeat;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.footer__container .social__contact .twitter {
+  background: url("../assets/icons/tw.png") no-repeat;
+  background-size: cover;
+}
+
+.footer__container .social__contact .twitter:hover {
+  background: url("../assets/icons/tw_gold.png") no-repeat;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.footer__container .social__contact .pinterest {
+  background: url("../assets/icons/pinterest.png") no-repeat;
+  background-size: cover;
+}
+
+.footer__container .social__contact .pinterest:hover {
+  background: url("../assets/icons/pinterest_gold.png") no-repeat;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 * {
