--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -11,15 +11,22 @@ $font-inter: 'Inter', serif;
 .about__hero {
     display: flex;
     flex-direction: column;
-    width: 500px;
-    padding-top: 160px;
-    padding-left: 80px;
+    width: 583px;
+    padding: 180px 80px;
+
+    @media (max-width: 768px) {
+        width: auto;
+    }
 
     h1 {
         font-family: $font-merri;
         font-size: 60px;
         color: #fff;
         height: 100px;
+
+        @media (max-width: 768px){
+            font-size: 50px;
+        }
     }
 
     p {
@@ -28,6 +35,7 @@ $font-inter: 'Inter', serif;
         font-style: italic;
         color: #fff;
         height: 100px;
+        letter-spacing: 1px;
     }
 
     button {
@@ -35,9 +43,11 @@ $font-inter: 'Inter', serif;
         height: 55px;
         background: #BDAE82;
         color: black;
+        margin-top: 40px;
         border-radius: 10px;
         font-size: 20px;
         font-family: $font-inter;
+        border: 2px solid #BDAE82;
 
         &:hover {
             color: #fff;
@@ -49,7 +59,6 @@ $font-inter: 'Inter', serif;
 
 .skills__container {
     padding: 100px 20px 0;
-    height: 420px;
     background: black;
 }
 
@@ -64,9 +73,13 @@ $font-inter: 'Inter', serif;
         color: #BDAE82;
         position: relative;
 
+        @media (max-width: 768px){
+            font-size: 30px;
+        }
+
         span {
             display: inline-block;
-            margin: 0 .4em;
+            margin: 0.4em;
 
             &::before, &::after {
                 content: '';
@@ -88,9 +101,16 @@ $font-inter: 'Inter', serif;
 }
 
 .about__skills {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    justify-content: center;
+    row-gap: 40px;
+    column-gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(320px, auto));
     margin-top: 60px;
+
+    @media (max-width: 768px){
+        flex-wrap: wrap;
+    }
 
     .skill {
         display: flex;
@@ -98,9 +118,16 @@ $font-inter: 'Inter', serif;
         align-items: center;
         width: 320px;
         margin-right: 20px;
+        margin-bottom: 36px;
 
         &:last-child {
             margin-right: 0;
+        }
+
+        @media (max-width: 768px) {
+            &:nth-child(2) {
+                margin-right: 0;
+            }
         }
     }
 
@@ -149,11 +176,24 @@ $font-inter: 'Inter', serif;
     background: black;
     padding-top: 100px;
 
+    .title__section {
+        span {
+            &::before, &::after {
+                width: 85%;
+            }
+
+            &::before {
+                margin-left: -87%;
+            }
+        }
+    }
+
     .btn__block {
         margin-top: 60px;
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
 
         .btn__season {
             width: 220px;
@@ -161,7 +201,7 @@ $font-inter: 'Inter', serif;
             background: black;
             border: 2px solid #BDAE82;
             color: #BDAE82;
-            margin-right: 5px;
+            margin: 10px;
             font-size: 20px;
             font-family: $font-inter;
             box-shadow: 0 2px 15px #bdae82;
@@ -180,6 +220,18 @@ $font-inter: 'Inter', serif;
                 background: #BDAE82;
                 color: black;
             }
+
+            @media (max-width: 720px) {
+                &:nth-child(3){
+                    margin-left: 0;
+                }
+            }
+
+            @media (max-width: 460px) {
+                width: 160px;
+                height: 35px;
+                font-size: 16px;
+            }
         }
     }
 
@@ -194,6 +246,11 @@ $font-inter: 'Inter', serif;
         .portfolio__img {
             width: 450px;
             height: 560px;
+
+            @media (max-width: 460px) {
+                width: 380px;
+                height: 485px;
+            }
         }
     }
 }
@@ -205,8 +262,14 @@ $font-inter: 'Inter', serif;
     .video__wrapper {
         padding: 60px 10px 0;
 
+        @media (max-width: 768px) {
+            padding: 60px 0 0;
+        }
+
         .video__player {
             background-image: url('../assets/video-player.png');
+            background-size: contain;
+            background-repeat: no-repeat;
             width: 100%;
             height: 705px;
             position: relative;
@@ -214,12 +277,25 @@ $font-inter: 'Inter', serif;
             justify-content: center;
             align-items: center;
 
+
+            @media (max-width: 768px) {
+                height: 341px;
+                background-size: cover;
+            }
+
             .btn__video {
                 background-image: url('../assets/icons/Play_hover.png');
+                background-size: contain;
+                background-repeat: no-repeat;
                 width: 130px;
                 height: 130px;
                 position: absolute;
                 cursor: pointer;
+
+                @media (max-width: 768px) {
+                    width: 75px;
+                    height: 75px;
+                }
 
                 &:hover {
                     background-image: url('../assets/icons/Play_hover_gold.png');
@@ -239,6 +315,10 @@ $font-inter: 'Inter', serif;
         justify-content: space-between;
         margin-top: 60px;
 
+        @media (max-width: 768px) {
+            flex-wrap: wrap;
+        }
+
         .block_price {
             border: 4px solid #bdae82;
             color: #fff;
@@ -247,7 +327,7 @@ $font-inter: 'Inter', serif;
             align-items: center;
             text-align: center;
             width: 450px;
-            margin-right: 15px;
+            margin: 10px 15px 10px 0;
             padding: 45px 0;
 
             &:last-child {
@@ -279,12 +359,29 @@ $font-inter: 'Inter', serif;
                 font-family: $font-inter;
                 border-radius: 10px;
                 margin-top: 40px;
+                border: 2px solid #BDAE82;
+                box-shadow: 0 2px 15px #bdae82;
 
                 &:hover {
                     color: #fff;
                     transition: all 0.3s ease-out;
                 }
             }
+
+            @media (max-width: 768px) {
+                &:first-child {
+                    margin-right: 0;
+                }
+
+                &:nth-child(2) {
+                    margin-right: 0;
+                }
+            }
+        }
+        
+
+        @media (max-width: 768px) {
+            justify-content: center;
         }
     }
 }
@@ -296,6 +393,11 @@ $font-inter: 'Inter', serif;
     background: url('../assets/contacts.jpg') no-repeat;
     background-size: cover;
     height: 700px;
+
+    @media (max-width: 768px){
+        justify-content: center;
+        text-align: center;
+    }
 
     .contact__wrapper {
         display: flex;
@@ -346,11 +448,16 @@ $font-inter: 'Inter', serif;
                 color: black;
                 font-family: $font-inter;
                 font-size: 20px;
+                border: 2px solid #BDAE82;
 
                 &:hover {
                     color: #fff;
                     transition: all 0.3s ease-out;
                 }
+            }
+
+            @media (max-width: 768px){
+                align-items: center;
             }
         }
     }
