--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -138,3 +138,26 @@ $font-style: 'Inter', sans-serif;
         }
     }
 }
+
+.switch__theme {
+    background: url('../assets/theme/theme_light.png') no-repeat;
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    transition: all 0.3s ease-in;
+
+    &:hover {
+        filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+    }
+
+    &.dark {
+        background: url('../assets/theme/theme_dark.png') no-repeat;
+        background-size: cover;
+        transition: all 0.3s ease-in;
+
+        &:hover {
+            filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+        }
+    }
+}
