--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -27,6 +27,9 @@ $font-inter: 'Inter', serif;
         @media (max-width: 768px){
             font-size: 50px;
         }
+        @media (max-width: 560px){
+            font-size: 40px;
+        }
     }
 
     p {
@@ -80,6 +83,10 @@ $font-inter: 'Inter', serif;
             font-size: 30px;
         }
 
+        @media (max-width: 500px){
+            font-size: 28px;
+        }
+
         span {
             display: inline-block;
             margin: 0.4em;
@@ -87,13 +94,13 @@ $font-inter: 'Inter', serif;
             &::before, &::after {
                 content: '';
                 position: absolute;
-                width: 100%;
+                width: 85%;
                 border-top: 2px solid #BDAE82;
                 margin-top: .6em;
             }
 
             &::before {
-                margin-left: -102%;
+                margin-left: -87%;
             }
 
             &::after {
@@ -131,6 +138,10 @@ $font-inter: 'Inter', serif;
             &:nth-child(2) {
                 margin-right: 0;
             }
+        }
+
+        @media (max-width: 715px) {
+            margin-right: 0;
         }
     }
 
@@ -181,11 +192,11 @@ $font-inter: 'Inter', serif;
     .title__section {
         span {
             &::before, &::after {
-                width: 85%;
+                width: 55%;
             }
 
             &::before {
-                margin-left: -87%;
+                margin-left: -57%;
             }
         }
     }
@@ -344,7 +355,9 @@ $font-inter: 'Inter', serif;
                 margin-bottom: 20px;
             }
 
-            p {
+            .block_price_text {
+                display: flex;
+                flex-direction: column;
                 font-size: 18px;
                 line-height: 30px;
             }
@@ -447,6 +460,7 @@ $font-inter: 'Inter', serif;
                 font-family: $font-inter;
                 font-size: 20px;
                 border: 2px solid #BDAE82;
+                cursor: pointer;
 
                 &:hover {
                     color: #fff;
