--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -118,6 +118,10 @@ $font-inter: 'Inter', serif;
     grid-template-columns: repeat(auto-fill, minmax(320px, auto));
     margin-top: 60px;
 
+    @media (max-width: 1438px){
+        column-gap: 240px;
+    }
+
     @media (max-width: 768px){
         flex-wrap: wrap;
     }
